--- a/doc/source/sample.yaml
+++ b/doc/source/sample.yaml
@@ -4,3 +4,13 @@ key2:
   - list item 1
   - list item 2
   - list item 3
+nested-list:
+  - ['a', 'b', 'c']
+  - ['A', 'B', 'C']
+mapping-series:
+  - cola: a
+    colb: b
+    colc: c
+  - cola: A
+    colb: B
+    colc: C
