--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,9 @@ commands =
 commands = {posargs}
 
 [testenv:docs]
-commands = python setup.py build_sphinx
+commands =
+  python setup.py build_sphinx
+  python setup.py build_sphinx -b json
 
 [flake8]
 show-source = True
