--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ commands = {posargs}
 commands =
   python setup.py build_sphinx
   python setup.py build_sphinx -b json
+  python setup.py build_sphinx -b latex
+  python setup.py build_sphinx -b epub
 
 [flake8]
 show-source = True
