add a command line tool to make testing templates easier
Add a tool to render a template given an input data file. No attempt is
made to prepare extra context values, so only standard Jinja2 features
are available in the template when used in this mode.

Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,10 @@ packages =
 namespace_packages =
     sphinxcontrib
 
+[entry_points]
+console_scripts =
+    test-template = sphinxcontrib.datatemplates.cli:main
+
 
 [build_sphinx]
 source-dir = doc/source
