move dependency settings from tox to setup.cfg
Use the [extras] feature of setuptools to add test and linter
dependencies to the package metadata.

Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,3 +44,14 @@ upload-dir = doc/build/html
 
 [wheel]
 universal = 1
+
+[extras]
+test =
+    fixtures>=3.0.0
+    python-subunit>=0.0.18
+    testrepository>=0.0.18
+    testscenarios>=0.4
+    testtools>=1.4.0
+    coverage!=4.4,>=4.0
+linter =
+    flake8==3.5.0
