--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,14 @@
 [tox]
 distribute = False
-envlist = py35,py27,pep8
+envlist = py36,py37,linter,docs
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
-deps =
-    discover
-    fixtures>=1.3.1
-    python-subunit>=0.0.18
-    testrepository>=0.0.18
-    testscenarios>=0.4
-    testtools>=1.4.0
 commands = python setup.py testr --slowest --testr-args='{posargs}'
+deps = .[test]
 
-[testenv:pep8]
-deps = flake8
+[testenv:linter]
+deps = .[linter]
 commands = flake8
 
 [testenv:cover]
