set up travis configuration
Use a shell script to ensure the tox and travis jobs run the same
commands.

Address a sphinx warning for a missing directory by adding a placeholder
file.

For now only docs and linter jobs report errors because there are no
actual unit tests.

Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,15 @@ envlist = py36,py37,linter,docs
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
-commands = python setup.py testr --slowest --testr-args='{posargs}'
 deps = .[test]
+commands=
+    {toxinidir}/tools/travis.sh '{posargs}'
 
 [testenv:linter]
 deps = .[linter]
-commands = flake8
+setenv =
+    BUILD=linter
+basepython=python3
 
 [testenv:cover]
 setenv = VIRTUAL_ENV={envdir}
@@ -20,11 +23,9 @@ commands =
 commands = {posargs}
 
 [testenv:docs]
-commands =
-  python setup.py build_sphinx
-  python setup.py build_sphinx -b json
-  python setup.py build_sphinx -b latex
-  python setup.py build_sphinx -b epub
+setenv =
+    BUILD=docs
+basepython=python3
 
 [flake8]
 show-source = True
