fix packaging metadata
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description-file = README.rst
 author = Doug Hellmann
 author-email = doug@doughellmann.com
 summary = Sphinx extension for rendering data files as nice HTML
-home-page = http://github.com/dhellmann/sphinxcontrib.datatemplates
+home-page = http://github.com/sphinx-contrib/datatemplates
 classifier =
     Development Status :: 4 - Beta
     Environment :: Console
@@ -13,9 +13,7 @@ classifier =
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3.4
-    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
     Topic :: Documentation
     Topic :: Utilities
 
