add twine check to linter
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = sphinxcontrib.datatemplates
 description-file = README.rst
+long-description-content-type = text/x-rst
 author = Doug Hellmann
 author-email = doug@doughellmann.com
 summary = Sphinx extension for rendering data files as nice HTML
@@ -51,5 +52,6 @@ test =
     testscenarios>=0.4
     testtools>=1.4.0
     coverage!=4.4,>=4.0
+    twine>=1.13.0
 linter =
     flake8==3.5.0
