add console script entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,12 @@ namespace_packages =
 
 [entry_points]
 console_scripts =
-    test-template = sphinxcontrib.datatemplates.cli:main
+    datatemplate-json = sphinxcontrib.datatemplates.standalone:main_json
+    datatemplate-csv = sphinxcontrib.datatemplates.standalone:main_csv
+    datatemplate-yaml = sphinxcontrib.datatemplates.standalone:main_yaml
+    datatemplate-xml = sphinxcontrib.datatemplates.standalone:main_xml
+    datatemplate-dbm = sphinxcontrib.datatemplates.standalone:main_dbm
+    datatemplate-import-module = sphinxcontrib.datatemplates.standalone:main_import_module
 
 
 [build_sphinx]
