--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,15 @@ language: python
 python:
   - "3.6"
 
-sudo: false
-
 # Add separate test environments for the docs and flake8 linter.
-matrix:
+
+jobs:
   include:
-    - env: BUILD=docs
-    - env: BUILD=linter
-
-# travis pre-installs some packages that may conflict with our test
-# dependencies, so remove them before we set ourselves up. Also
-# install pbr to avoid any setup_requires funkiness with
-# pip/setuptools.
-before_install:
-  - pip uninstall -y nose mock
-  - pip install pbr
-
-install: pip install .[test] .[linter]
+    - name: "Docs"
+      env: CMD=python setup.py build_docs -E -W
+    - name: "Lint"
+      install: pip install flake8
+      env: CMD=flake8 sphinxcontrib setup.py
 
 script:
-  - ./tools/travis.sh
+  - $CMD
