--- a/setup.cfg
+++ b/setup.cfg
@@ -45,13 +45,5 @@ upload-dir = doc/build/html
 universal = 1
 
 [extras]
-test =
-    fixtures>=3.0.0
-    python-subunit>=0.0.18
-    testrepository>=0.0.18
-    testscenarios>=0.4
-    testtools>=1.4.0
-    coverage!=4.4,>=4.0
-    twine>=1.13.0
 linter =
-    flake8==3.5.0
+    flake8
