--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
 jobs:
   include:
     - name: "Docs"
-      script: CMD=python setup.py build_docs -E -W
+      script: python setup.py build_docs -E -W
     - name: "Lint"
       install: pip install flake8
-      script: CMD=flake8 sphinxcontrib setup.py
+      script: flake8 sphinxcontrib setup.py
 
