--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
   include:
     - name: "Docs"
       script: 
-        - pip install setup.py
+        - python setup.py install
         - python sphinx-build -E -W -v -T doc/source doc/build
     - name: "Lint"
       install: pip install flake8
