--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ python:
 jobs:
   include:
     - name: "Docs"
-      script: 
-        - python setup.py install
-        - python sphinx-build -E -W -v -T doc/source doc/build
+      install: python setup.py install
+      script: python sphinx-build -E -W -v -T doc/source doc/build
     - name: "Lint"
       install: pip install flake8
       script: flake8 -v sphinxcontrib setup.py
