--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ jobs:
   include:
     - name: "Docs"
       install:
-        - python setup.py bdist
-        - pip install --no-index --find-links=dist/ sphinxcontrib.datatemplates
+        - pip install -r requirements.txt
+        - python setup.py install
       script: python sphinx-build -E -W -v -T doc/source doc/build
     - name: "Lint"
       install: pip install flake8
