--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ python:
 jobs:
   include:
     - name: "Docs"
-      install: ~        
-      script:
-        - python setup.py bdist
-        - pip install --find-links dist/ sphinxcontrib.datatemplates
-        - python -m sphinx.cmd.build -E -W -v -T doc/source doc/build
+      install:
+        - pip install -r requirements.txt
+        - python setup.py install
+      script: python -m sphinx.cmd.build -E -W -v -T doc/source doc/build
     - name: "Lint"
       install: pip install flake8
       script: flake8 -v sphinxcontrib setup.py
