add travis job to check package settings with twine
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ jobs:
     - name: "Lint"
       install: pip install flake8
       script: flake8 -v sphinxcontrib setup.py
-
+    - name: "Check Package"
+      install: pip install twine
+      script: ./tools/check_package.sh
