--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ classifier =
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Topic :: Documentation
     Topic :: Utilities
 
