--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,20 @@ language: python
 
 python:
   - "3.6"
+  - "3.7"
+  - "3.8"
+
+install:
+  - pip install .[test]
+
+script:
+  - pytest -v sphinxcontrib
 
 # Add separate test environments for the docs and flake8 linter.
 
 jobs:
   include:
     - name: "Docs"
-      install:
-        - pip install -r requirements.txt
-        - python setup.py install
       script: python -m sphinx.cmd.build -E -W -v -T doc/source doc/build
     - name: "Lint"
       install: pip install flake8
