eliminate the use of shell scripts
Remove the check_package.sh script and inline the commands it was
using.

Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,8 @@ commands=
 deps=
     twine
 commands=
-    {toxinidir}/tools/check_package.sh
+    python setup.py sdist
+    twine check dist/*.tar.gz
 
 [flake8]
 show-source = True
