--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,6 @@ jobs:
       script: flake8 -v sphinxcontrib setup.py
     - name: "Check Package"
       install: pip install twine
-      script: ./tools/check_package.sh
+      script:
+        - python setup.py sdist
+        - twine check dist/*.tar.gz
