rename console script to "datatemplate"
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ namespace_packages =
 
 [entry_points]
 console_scripts =
-    test-template = sphinxcontrib.datatemplates.cli:main
+    datatemplate = sphinxcontrib.datatemplates.cli:main
 
 [wheel]
 universal = 1
