add check-python-versions to pkglint job

--- a/tox.ini
+++ b/tox.ini
@@ -16,9 +16,11 @@ commands=
 [testenv:pkglint]
 deps=
     twine
+    check-python-versions
 commands=
     python setup.py sdist
     twine check dist/*.tar.gz
+    check-python-versions --only setup.py,setup.cfg,.github/workflows/test.yml
 
 [flake8]
 show-source = True
