--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ classifier =
     Development Status :: 4 - Beta
     Environment :: Console
     Environment :: Web Environment
+    Framework :: Sphinx :: Extension
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
