modernize packaging files
Replace pbr with setuptools, build, and setuptools_scm.

--- a/tox.ini
+++ b/tox.ini
@@ -11,16 +11,17 @@ commands=
 deps=
     .[linter]
 commands=
-    flake8 sphinxcontrib setup.py
+    flake8 sphinxcontrib
 
 [testenv:pkglint]
 deps=
+    build
     twine
     check-python-versions
 commands=
-    python setup.py sdist
+    python -m build
     twine check dist/*.tar.gz
-    check-python-versions --only setup.py,setup.cfg,.github/workflows/test.yml
+    check-python-versions --only pyproject.toml,.github/workflows/test.yml
 
 [flake8]
 show-source = True
