--- a/.mergify.yml
+++ b/.mergify.yml
@@ -31,6 +31,7 @@ pull_request_rules:
         - "check-success=build (3.9)"
         - "check-success=build (3.10)"
         - "check-success=build (3.11)"
+        - "check-success=build (3.12)"
         - "-draft"
         - or:
           - "approved-reviews-by=dhellmann"
