--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -27,7 +27,7 @@ jobs:
         pip install setuptools wheel twine pbr
     - name: Build sdist and wheel
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
     # - name: Publish distribution to Test PyPI
     #   uses: pypa/gh-action-pypi-publish@master
     #   with:
