unify list of packaging dependencies
Make the tox pkglint job and the github action for publishing packages
use the same source for the list of dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,7 @@ commands=
 
 [testenv:pkglint]
 deps=
-    build
-    twine
+    .[build]
     check-python-versions
 commands=
     python -m build
