--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tox-environment:
-          - docs
-          - linter
-          - pkglint
+        hatch-environment:
+          - docs:build
+          - test:lint
+          - test:pkglint
 
     steps:
       - uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: python -m pip install tox
+        run: python -m pip install hatch
 
       - name: Run
-        run: tox -e ${{ matrix.tox-environment }}
+        run: hatch run ${{ matrix.hatch-environment }}
