--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,5 +1,4 @@
 pull_request_rules:
-
   - name: Add CI label
     conditions:
       - or:
@@ -24,20 +23,18 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - and:
-        - "check-success=build (docs)"
-        - "check-success=build (linter)"
-        - "check-success=build (pkglint)"
-        - "check-success=build (3.8)"
-        - "check-success=build (3.9)"
-        - "check-success=build (3.10)"
-        - "check-success=build (3.11)"
-        - "check-success=build (3.12)"
-        - "-draft"
-        - or:
-          - "approved-reviews-by=dhellmann"
-          - "author=dhellmann"
-          - "approved-reviews-by=janbrohl"
-          - "author=janbrohl"
+          - "check-success=build (docs:build)"
+          - "check-success=build (test:lint)"
+          - "check-success=build (test:pkglint)"
+          - "check-success=build (3.11)"
+          - "check-success=build (3.12)"
+          - "check-success=build (3.13)"
+          - "-draft"
+          - or:
+              - "approved-reviews-by=dhellmann"
+              - "author=dhellmann"
+              - "approved-reviews-by=janbrohl"
+              - "author=janbrohl"
     actions:
       merge:
         method: merge
